app/javascript/styles/modern/glitch-diff.scss
// Remove the left padding
#mastodon .status {
  --status-left-padding: 15px !important;
}

/* Fixes */
// While we wait for glitch update
.account__header__bio .account__header__fields {
  margin-left: 15px !important;
  margin-right: 15px !important;
}
.about__section__body,
.account__header__bio {
  .account__header__fields {
    max-width: calc(100% - 30px) !important;

    dl {
      display: block;
    }
    dd,
    dt {
      font-size: 13px;
      line-height: 18px;
      padding: 0;
      text-align: initial;
    }
    dt,
    dd.verified {
      background: transparent !important;
      border: none !important;
    }
  }
}

// This fixes collapsed toots (we still override some parts bellow) but also
// clicking on username when you open their profile because ".detailled-satatus__wrapper"
// is at an another place and not with .focusable as expected upstream
#mastodon .detailed-status__wrapper .status__content::before,
#mastodon .detailed-status__wrapper .status__content::after {
  height: auto !important;
}

#mastodon {
  .status {
    // Modern sets the background to none,
    // so put one back for direct statuses
    &.status-direct {
      background: lighten($ui-base-color, 8%) !important;
      border-bottom-color: lighten($ui-base-color, 12%) !important;
    }

    // Fix the collapsed gradiant so it stays inside the "card"
    &.collapsed {
      .status__content {
        overflow: hidden !important;

        &:after {
          bottom: 0 !important;
          height: auto !important;
          left: 85px !important;
          right: 85px !important;
          top: 0 !important;
        }
      }
    }
  }

  // Add some spacing around the role on the other side too
  .account-timeline__header .account-role {
    margin-left: 0.4em;
  }

  // Make the @ address have a minimum width (so it wraps better)
  // And flex: 1 to push the role tag to the right
  .account__header__tabs__name h1 small {
    flex: 1;
    min-width: 150px;
  }

  // Don't make the profile header sticky, content goes thru it
  .account-timeline__header .account__header__image {
    position: relative !important;
  }

  // Fix profile notes' textarea not usable at all
  .account__header__fields textarea,
  .account__header__account-note textarea {
    width: -webkit-fill-available !important;
    width: 100% !important;
  }

  // Fix icons being misaligned
  .notification .notification__message,
  .status__prepend {
    margin-left: 30px !important;
  }
  .notification__message,
  .status__prepend {
    margin-bottom: 0 !important;
  }
  .status__prepend {
    margin-bottom: 8px !important;
    padding-top: 8px !important;
  }

  // Remove useless background color change on focus/active behind the spoiler button
  .status__content__spoiler-link {
    &:after,
    &:before {
      background: transparent !important;
    }
  }

  // Since we have more elements on the action bar (including the date/time)
  // I'm reducing the padding a bit
  .detailed-status__action-bar .icon-button,
  .status__action-bar .icon-button {
    padding: .2em !important;
    min-width: 0 !important;
  }
  .status__action-bar-button {
    margin-right: 8px
  }

  // Stop showing the text next to action buttons
  .icon-button[aria-label]:after {
    content: none !important;
  }

  // Glitch still uses -- here while vanilla is __
  // so I'm just kinda copy-pasting the styles here
  .drawer--header {
    background: lighten($ui-base-color, 8%);
    border-radius: var(--radius-round);
    margin-inline: 5px;
    overflow: hidden;
    border: 0!important;
    
    & > * {
      border-bottom: none;
    }
  }

  // Make the background on the compose column transparent
  // which is better on mobile IMO
  .drawer__inner:not(.darker),
  .drawer__inner__mastodon {
    background-color: transparent !important;
  }

  // The cancel button when replying was inaccessible
  .compose-form .reply-indicator__header {
    margin-bottom: -5px;

    .account {
      border-radius: 0!important; // Fix weird radius
      display: inline-block;
      width: calc(100% - 1.28571em - 10px);
    }
  }

  .pillbar-button {
    // Fix unreadable options in the column settings when not selected
    &:not(.active) {
      color: $darker-text-color;
    }

    // And remove ugly box-shadow
    &:not([disabled]).active {
      box-shadow: none;
    }
  }
}

@media (max-width: 895px) {
  #mastodon .status__action-bar {
    // Reverting the margin on elements that were negative due to the
    // big padding the theme used to have
    margin-left: 0 !important;
  }
}

// Some elements went above floating menus or PiP
// (like the spoiler media button or profile pictures)
.privacy-dropdown__dropdown,
.language-dropdown__dropdown,
.emoji-picker-dropdown__menu,
.picture-in-picture {
  z-index: 500;
}

// Fix alignement in the sharing/following popups
.modal-layout.modal-layout .container-alt {
  height: auto !important;
}

// This was used in mastodon.coffee, I like it
.layout-multiple-columns .column {
  flex-grow: 1;
  max-width: 500px;
}

